--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -9,6 +9,9 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <script srt="//cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js" type="text/javascript"></script>
+        <script src="{% static 'node_modules/chart.js/dist/Chart.min.js' %}"></script> 
+        <script src="{% static 'node_modules/angular-chart.js/dist/angular-chart.min.js' %}"></script> 
     </head>
     
     <body> 
